no-issue: migrate deprecated methods marked for removal in JDK
And remove redundant generics