@@ -60,12 +60,12 @@ public class GetCourseBeginDateFunction extends AbstractFunction {
 			return Double.valueOf(lifecycle.getValidFrom().getTime());
 		} else {
 			// what to do in case of no date available??? -> return date in the future
-			return new Double(Double.POSITIVE_INFINITY);
+			return Double.valueOf(Double.POSITIVE_INFINITY);
 		}
 	}
 
 	@Override
 	protected Object defaultValue() {
-		return new Double(Double.MIN_VALUE);
+		return Double.valueOf(Double.MIN_VALUE);
 	}
 }
