@@ -66,7 +66,7 @@ public class MultiSelectColumnDescriptorTest {
 	
 	@Test
 	public void testEqualsContract(){
-		assertFalse("Wrong equals implementation, different types are recognized as equals ",one.equals(new Integer(1)));
+		assertFalse("Wrong equals implementation, different types are recognized as equals ",one.equals(Integer.valueOf(1)));
 		assertFalse("Wrong equals implementation, different objects are recognized as equals ",one.equals(two));
 		assertFalse("Wrong equals implementation, null value is recognized as equals ",one.equals(null));
 		assertTrue("Wrong equals implementation, same objects are NOT recognized as equals ",one.equals(sameRefAsOne));
